--- a/sign_back/config.env
+++ b/sign_back/config.env
@@ -1,1 +1,1 @@
-DB_ACCESS = "mongodb+srv://gonzalo:gonzalo@cluster0.c9cxaso.mongodb.net/signUpSchema?retryWrites=true&w=majority" 
+DB_ACCESS = "mongodb+srv://gonzalo:gonzalo@cluster0.c9cxaso.mongodb.net/dbUsers?retryWrites=true&w=majority" 
